# internal/domain/entity/order.go
@@ -1,30 +1,29 @@
 package entity
 
 import (
-	"encoding/json"
 	"fmt"
 )
 
-type OrderDetails struct {
-	PointID int
-	Order   string
+type Product struct {
+	Name     string `json:"name"`
+	Price    int    `json:"price"`
+	Quantity int    `json:"quantity"`
 }
 
-func (o OrderDetails) Details() string {
-	var M = map[string]interface{}{}
-
-	err := json.Unmarshal([]byte(o.Order), &M)
-	if err != nil {
-		return ""
-	}
-
-	res := ""
-	for key, value := range M {
-		res += fmt.Sprintf("%v - %v\n", key, value)
-	}
-	return res
+type Order struct {
+	PointID  int       `json:"point_id"`
+	Products []Product `json:"products"`
 }
 
-func (o OrderDetails) PointId() int {
+func (o Order) Details() string {
+	result := ""
+	for i, product := range o.Products {
+		s := fmt.Sprintf("%v. Name: %v, price: %v, quantity: %v\n", i, product.Name, product.Price, product.Quantity)
+		result += s
+	}
+	return result
+}
+
+func (o Order) PointId() int {
 	return o.PointID
 }
