# internal/handlers/rest/v1/order/postOrder.go
@@ -1,22 +1,18 @@
 package order
 
 import (
-	"encoding/json"
 	"errors"
 	"github.com/labstack/echo/v4"
 	"github.com/pablogolobaro/chequery/internal/domain/entity"
 	"net/http"
-	"strconv"
 )
 
 const (
-	queryError = "wrong query parameter"
-	bodyError  = "wrong body parameters"
-	orderError = "order is not a valid json"
+	bodyError = "wrong body parameters"
 )
 
 type OrderCreateRequest struct {
-	Order string `json:"order"`
+	Order entity.Order `json:"order"`
 }
 
 type OrderCreateResponse struct {
@@ -25,30 +21,15 @@ type OrderCreateResponse struct {
 }
 
 func (o *orderHandler) PostOrder(ctx echo.Context) error {
-	queryParamPoint := ctx.QueryParam("point_id")
-	if queryParamPoint == "" {
-
-		return echo.ErrBadRequest.SetInternal(errors.New(queryError))
-	}
-
-	pointId, err := strconv.Atoi(queryParamPoint)
-	if err != nil {
-		return echo.ErrBadRequest.SetInternal(errors.New(queryError))
-	}
-
 	request := OrderCreateRequest{}
 
-	err = ctx.Bind(&request)
+	err := ctx.Bind(&request.Order)
 	if err != nil {
 
 		return echo.ErrBadRequest.SetInternal(errors.New(bodyError))
 	}
 
-	if !json.Valid([]byte(request.Order)) {
-		return echo.ErrBadRequest.SetInternal(errors.New(orderError))
-	}
-
-	ids, err := o.useCases.CreateChecks(ctx.Request().Context(), entity.OrderDetails{PointID: pointId, Order: request.Order})
+	ids, err := o.useCases.CreateChecks(ctx.Request().Context(), entity.Order{PointID: request.Order.PointID, Products: request.Order.Products})
 	if err != nil {
 
 		return echo.ErrInternalServerError
